--- a/src/home.fxml
+++ b/src/home.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,49 +11,49 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomeController">
-   <children>
-      <Text fill="WHITE" layoutX="449.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MUSIC" textAlignment="CENTER">
-         <font>
-            <Font name="Monospaced Regular" size="25.0" />
-         </font>
-      </Text>
-      <ScrollPane layoutX="35.0" layoutY="159.0" prefHeight="300.0" prefWidth="923.0">
-         <content>
-            <VBox fx:id="vbox" prefHeight="540.0" prefWidth="906.0" />
-         </content>
-      </ScrollPane>
-      <HBox fx:id="topBar" blendMode="SCREEN" layoutX="35.0" layoutY="109.0" prefHeight="43.0" prefWidth="906.0" style="-fx-border-color: white; -fx-border-width: 2px;">
-         <children>
-            <GridPane prefHeight="30.0" prefWidth="920.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK" textAlignment="CENTER">
-                     <font>
-                        <Font name="Monospaced Regular" size="13.0" />
-                     </font>
-                  </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="PUBLISHER" textAlignment="CENTER" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="Monospaced Regular" size="13.0" />
-                     </font>
-                  </Text>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="DURATION" textAlignment="CENTER" GridPane.columnIndex="2">
-                     <font>
-                        <Font name="Monospaced Regular" size="13.0" />
-                     </font>
-                  </Text>
-               </children>
-            </GridPane>
-         </children>
-      </HBox>
-      <Button layoutX="830.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToSettings" text="Settings" />
-      <Button layoutX="75.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddNewMusic" text="Add Music" />
-   </children>
+    <children>
+        <Text fill="WHITE" layoutX="449.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MUSIC" textAlignment="CENTER">
+            <font>
+                <Font name="Monospaced Regular" size="25.0" />
+            </font>
+        </Text>
+        <ScrollPane layoutX="35.0" layoutY="159.0" prefHeight="300.0" prefWidth="923.0">
+            <content>
+                <VBox fx:id="vbox" prefWidth="906.0" />
+            </content>
+        </ScrollPane>
+        <HBox fx:id="topBar" blendMode="SCREEN" layoutX="35.0" layoutY="109.0" prefHeight="43.0" prefWidth="906.0" style="-fx-border-color: white; -fx-border-width: 2px;">
+            <children>
+                <GridPane prefHeight="30.0" prefWidth="920.0">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK" textAlignment="CENTER">
+                            <font>
+                                <Font name="Monospaced Regular" size="13.0" />
+                            </font>
+                        </Text>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ARTIST" textAlignment="CENTER" GridPane.columnIndex="1">
+                            <font>
+                                <Font name="Monospaced Regular" size="13.0" />
+                            </font>
+                        </Text>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="DURATION" textAlignment="CENTER" GridPane.columnIndex="2">
+                            <font>
+                                <Font name="Monospaced Regular" size="13.0" />
+                            </font>
+                        </Text>
+                    </children>
+                </GridPane>
+            </children>
+        </HBox>
+        <Button layoutX="830.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToSettings" text="Settings" />
+        <Button layoutX="75.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddNewMusic" text="Add Music" />
+    </children>
 </AnchorPane>
