--- a/src/rootPage.fxml
+++ b/src/rootPage.fxml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RootPageController">
+<StackPane fx:id="root" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RootPageController">
     <children>
-        <ImageView fx:id="backgroundImage" fitHeight="549.0" fitWidth="974.0" layoutX="-6.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../Background.jpg" />
-            </image>
-        </ImageView>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" height="552.0" layoutX="-9.0" layoutY="-10.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" width="978.0" />
-      <StackPane fx:id="root" prefHeight="543.0" prefWidth="969.0" />
+        <ImageView fx:id="backgroundImage" fitHeight="540.0" fitWidth="960.0" pickOnBounds="true" preserveRatio="true" />
     </children>
-</AnchorPane>
+</StackPane>
