--- a/src/settings.fxml
+++ b/src/settings.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
@@ -19,44 +18,58 @@
                 <Font name="Monospaced Regular" size="25.0" />
             </font>
         </Text>
-        <ScrollPane layoutX="27.0" layoutY="88.0" prefHeight="300.0" prefWidth="923.0">
+        <ScrollPane layoutX="27.0"
+                    layoutY="88.0" prefHeight="300.0" prefWidth="923.0">
             <content>
                 <VBox prefHeight="540.0" prefWidth="906.0">
                     <children>
                         <HBox fx:id="topBar1" blendMode="SCREEN" prefHeight="43.0" prefWidth="906.0" styleClass="row-box" stylesheets="@home.css">
+
                             <children>
                                 <GridPane prefHeight="30.0" prefWidth="920.0">
                                     <columnConstraints>
+
                                         <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                         <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+
                                         <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     </columnConstraints>
                                     <rowConstraints>
+
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
+
                                     <children>
                                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Background Image (16:9): " textAlignment="CENTER">
                                             <font>
+
                                                 <Font name="Monospaced Regular" size="13.0" />
                                             </font>
+
                                         </Text>
                                         <Text fx:id="path_text" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="PATH" textAlignment="CENTER" GridPane.columnIndex="1">
+
                                             <font>
                                                 <Font name="Monospaced Regular" size="13.0" />
+
                                             </font>
                                         </Text>
-                              <Button mnemonicParsing="false" onAction="#chooseBackground" text="Change BG" GridPane.columnIndex="2" />
+                                        <Button mnemonicParsing="false" onAction="#chooseBackground" text="Change BG" GridPane.columnIndex="2" />
+
                                     </children>
                                     <padding>
+
                                         <Insets left="10.0" right="10.0" />
                                     </padding>
                                 </GridPane>
+
                             </children>
                         </HBox>
                     </children>
                 </VBox>
             </content>
         </ScrollPane>
-      <Button layoutX="880.0" layoutY="29.0" mnemonicParsing="false" onAction="#goToHome" text="X" />
+        <Button layoutX="880.0" layoutY="29.0" mnemonicParsing="false" onAction="#goToHome" text="X" />
+
     </children>
 </AnchorPane>
