--- a/src/PlayerPage.fxml
+++ b/src/PlayerPage.fxml
@@ -6,11 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="540.0" prefWidth="960.0" userData="playerPage" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PlayerPageController">
     <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" height="552.0" layoutX="-9.0" layoutY="-10.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" width="978.0" />
+
         <Button layoutX="27.0" layoutY="27.0" mnemonicParsing="false" onAction="#goToHome" text="&lt; Back" />
         <VBox alignment="CENTER" layoutX="230.0" layoutY="135.0" prefHeight="270.0" prefWidth="500.0" spacing="20.0">
             <children>
