--- a/src/settings.fxml
+++ b/src/settings.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
@@ -8,61 +9,51 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SettingsController">
     <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" height="552.0" layoutX="-9.0" layoutY="-10.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" width="978.0" />
+
         <Text fill="WHITE" layoutX="426.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SETTINGS" textAlignment="CENTER">
             <font>
                 <Font name="Monospaced Regular" size="25.0" />
             </font>
         </Text>
-        <ScrollPane layoutX="27.0"
-                    layoutY="88.0" prefHeight="300.0" prefWidth="923.0">
+        <ScrollPane layoutX="27.0" layoutY="88.0" prefHeight="300.0" prefWidth="923.0">
             <content>
                 <VBox prefHeight="540.0" prefWidth="906.0">
                     <children>
                         <HBox fx:id="topBar1" blendMode="SCREEN" prefHeight="43.0" prefWidth="906.0" styleClass="row-box" stylesheets="@home.css">
-
                             <children>
                                 <GridPane prefHeight="30.0" prefWidth="920.0">
                                     <columnConstraints>
-
                                         <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                         <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-
                                         <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     </columnConstraints>
                                     <rowConstraints>
-
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
-
                                     <children>
                                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Background Image (16:9): " textAlignment="CENTER">
                                             <font>
-
                                                 <Font name="Monospaced Regular" size="13.0" />
                                             </font>
-
                                         </Text>
                                         <Text fx:id="path_text" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="PATH" textAlignment="CENTER" GridPane.columnIndex="1">
-
                                             <font>
                                                 <Font name="Monospaced Regular" size="13.0" />
-
                                             </font>
                                         </Text>
                                         <Button mnemonicParsing="false" onAction="#chooseBackground" text="Change BG" GridPane.columnIndex="2" />
-
                                     </children>
                                     <padding>
-
                                         <Insets left="10.0" right="10.0" />
                                     </padding>
                                 </GridPane>
-
                             </children>
                         </HBox>
                     </children>
@@ -70,6 +61,5 @@
             </content>
         </ScrollPane>
         <Button layoutX="880.0" layoutY="29.0" mnemonicParsing="false" onAction="#goToHome" text="X" />
-
     </children>
 </AnchorPane>
