--- a/src/PlaylistSongsPage.fxml
+++ b/src/PlaylistSongsPage.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomeController">
+<AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PlaylistSongsPageController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" height="552.0" layoutX="-9.0" layoutY="-10.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" width="978.0" />
 
-        <Text fill="WHITE" layoutX="449.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MUSIC" textAlignment="CENTER">
+        <Text fx:id="playlistNameText" fill="WHITE" layoutX="425.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLAYLIST" textAlignment="CENTER">
             <font>
                 <Font name="Monospaced Regular" size="25.0" />
             </font>
@@ -57,8 +57,7 @@
                 </GridPane>
             </children>
         </HBox>
-        <Button layoutX="830.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToSettings" text="Settings" />
-        <Button layoutX="720.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToPlaylists" text="Playlists" />
+        <Button layoutX="830.0" layoutY="30.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
         <Button layoutX="75.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddNewMusic" text="Add Music" />
     </children>
 </AnchorPane>
