basic music player system

--- a/src/home.fxml
+++ b/src/home.fxml
@@ -8,22 +8,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomeController">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" height="552.0" layoutX="-9.0" layoutY="-10.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" width="978.0" />
 
         <Text fill="WHITE" layoutX="449.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MUSIC" textAlignment="CENTER">
             <font>
                 <Font name="Monospaced Regular" size="25.0" />
             </font>
         </Text>
-        <ScrollPane layoutX="35.0" layoutY="159.0" prefHeight="300.0" prefWidth="923.0">
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="35.0" layoutY="159.0" prefHeight="300.0" prefWidth="906.0">
             <content>
-                <VBox fx:id="vbox" prefWidth="906.0" />
+                <VBox fx:id="vbox" prefHeight="0.0" prefWidth="892.0" />
             </content>
         </ScrollPane>
         <HBox fx:id="topBar" blendMode="SCREEN" layoutX="35.0" layoutY="109.0" prefHeight="43.0" prefWidth="906.0" style="-fx-border-color: white; -fx-border-width: 2px;">
