--- a/src/home.css
+++ b/src/home.css
@@ -19,9 +19,25 @@
 .scroll-bar:horizontal {
     -fx-opacity: 0;
 }
-#topbar {
+
+.top-bar {
+    -fx-background-color: rgba(0, 0, 0, 0.5);
     -fx-border-color: white;
-    -fx-border-width: 2;
+    -fx-border-width: 0 0 1px 0;
+}
+
+.custom-title-bar {
+    -fx-background-color: rgba(0, 0, 0, 0.5);
+}
+
+.window-button {
+    -fx-background-color: transparent;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.window-button:hover {
+    -fx-background-color: rgba(255, 255, 255, 0.2);
 }
 
 /* ---
