--- a/src/Pomodoro.fxml
+++ b/src/Pomodoro.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.geometry.Pos?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,8 +11,8 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import java.net.URL?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PomodoroController">
     <stylesheets>
         <URL value="@home.css" />
@@ -26,58 +26,94 @@
         </Text>
     </HBox>
 
-    <Button layoutX="880.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToHome" text="X" />
+    <Button layoutX="880.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToHome" text="X" styleClass="close-btn"/>
 
     <HBox alignment="CENTER" layoutX="27.0" layoutY="88.0" prefHeight="400.0" prefWidth="906.0" spacing="100.0" style="-fx-background-color: transparent;">
         <padding>
-            <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
+            <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
         </padding>
-        <VBox alignment="TOP_CENTER" spacing="20.0" HBox.hgrow="ALWAYS" prefWidth="400">
+        <VBox alignment="TOP_CENTER" prefWidth="400" spacing="20.0" HBox.hgrow="ALWAYS">
             <HBox alignment="CENTER" spacing="40.0">
-                <VBox alignment="CENTER" spacing="40.0">
-                    <Button fx:id="playButton" text="▶" onAction="#handlePlay" styleClass="pomodoro-button" prefWidth="60.0" prefHeight="60.0" style="-fx-font-size: 20pt; -fx-font-family: monospace;"/>
-                    <Button fx:id="pauseButton" text="■" onAction="#handlePause" styleClass="pomodoro-button" prefWidth="60.0" prefHeight="60.0" style="-fx-font-size: 20pt; -fx-font-family: monospace;"/>
-                    <Button fx:id="stopButton" text="✖" onAction="#handleStop" styleClass="pomodoro-button" prefWidth="60.0" prefHeight="60.0" style="-fx-font-size: 15pt; -fx-font-family: monospace;"/>
+                <VBox alignment="CENTER" spacing="50.0">
+                    <Button fx:id="playButton" onAction="#handlePlay" prefHeight="50.0" prefWidth="50.0" style="-fx-font-size: 20pt; -fx-font-family: monospace;" styleClass="icon-btn">
+                        <graphic>
+                            <FontIcon iconLiteral="fas-play" iconSize="22" styleClass="iconli-font-icon"/>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="pauseButton" onAction="#handlePause" prefHeight="50.0" prefWidth="50.0" style="-fx-font-size: 20pt; -fx-font-family: monospace;" styleClass="icon-btn">
+                        <graphic>
+                            <FontIcon iconLiteral="fas-pause" iconSize="22" styleClass="iconli-font-icon"/>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="stopButton" onAction="#handleStop" prefHeight="50.0" prefWidth="50.0" style="-fx-font-size: 15pt; -fx-font-family: monospace;" styleClass="icon-btn">
+                        <graphic>
+                            <FontIcon iconLiteral="fas-stop" iconSize="22" styleClass="iconli-font-icon"/>
+                        </graphic>
+                    </Button>
                 </VBox>
 
                 <VBox alignment="CENTER" spacing="5">
-                    <StackPane fx:id="timerContainer" alignment="CENTER" maxWidth="350" maxHeight="350">
+                    <StackPane fx:id="timerContainer" alignment="CENTER" maxHeight="350" maxWidth="350">
                         <StackPane fx:id="ringVisualsStack" alignment="CENTER">
-                            <Circle radius="110.0" fill="transparent" stroke="#FFFFFF66" strokeWidth="2.0" />
-                            <Circle fx:id="timerProgressRing" radius="110.0" fill="transparent" stroke="#FFFFFF" strokeWidth="5.0" strokeLineCap="ROUND"/>
+                            <Circle fill="transparent" radius="110.0" stroke="#FFFFFF66" strokeWidth="4.0" />
+                            <Circle fx:id="timerProgressRing" fill="transparent" radius="110.0" stroke="#FFFFFF" strokeLineCap="ROUND" strokeWidth="10.0" />
                         </StackPane>
-                        <Label fx:id="timerLabel" text="00:25:00" alignment="CENTER" style="-fx-font-size: 30pt; -fx-text-fill: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 5,0,0,0);" prefWidth="200.0">
+                        <Label fx:id="timerLabel" alignment="CENTER" prefWidth="200.0" style="-fx-font-size: 25pt; -fx-text-fill: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 5,0,0,0); -fx-font-family: monospace; -fx-fond-weight: bold;" text="00:25:00">
                             <font>
                                 <Font name="Inter" size="55.0" />
                             </font>
                         </Label>
-                        <HBox fx:id="decreaseButtonHBox" alignment="CENTER" spacing="40.0" StackPane.alignment="BOTTOM_CENTER">
+                        <HBox fx:id="decreaseButtonHBox" alignment="CENTER" spacing="40.0" StackPane.alignment="CENTER">
                             <StackPane.margin>
                                 <Insets top="200.0" />
                             </StackPane.margin>
-                            <Button fx:id="decreaseHourButton" text="-" onAction="#handleTimeAdjustment" styleClass="pomodoro-button" prefWidth="50.0" prefHeight="50.0" />
-                            <Button fx:id="decreaseMinuteButton" text="-" onAction="#handleTimeAdjustment" styleClass="pomodoro-button" prefWidth="50.0" prefHeight="50.0" />
-                            <Button fx:id="decreaseSecondButton" text="-" onAction="#handleTimeAdjustment" styleClass="pomodoro-button" prefWidth="50.0" prefHeight="50.0" />
+                            <Button fx:id="decreaseHourButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-minus" iconSize="22" styleClass="iconli-font-icon"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="decreaseMinuteButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-minus" iconSize="22" styleClass="iconli-font-icon"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="decreaseSecondButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-minus" iconSize="22" styleClass="iconli-font-icon"/>
+                                </graphic>
+                            </Button>
                         </HBox>
 
-                        <HBox  fx:id="increaseButtonHBox" alignment="CENTER" spacing="40.0" StackPane.alignment="TOP_CENTER">
+                        <HBox fx:id="increaseButtonHBox" alignment="CENTER" spacing="40.0" StackPane.alignment="TOP_CENTER">
                             <StackPane.margin>
                                 <Insets bottom="200.0" />
                             </StackPane.margin>
-                            <Button fx:id="increaseHourButton" text="+" onAction="#handleTimeAdjustment" styleClass="pomodoro-button" prefWidth="40.0" prefHeight="50.0" />
-                            <Button fx:id="increaseMinuteButton" text="+" onAction="#handleTimeAdjustment" styleClass="pomodoro-button" prefWidth="50.0" prefHeight="50.0" />
-                            <Button fx:id="increaseSecondButton" text="+" onAction="#handleTimeAdjustment" styleClass="pomodoro-button" prefWidth="40.0" prefHeight="50.0" />
+                            <Button fx:id="increaseHourButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
+                            <graphic>
+                                <FontIcon iconLiteral="fas-plus" iconSize="22" styleClass="iconli-font-icon"/>
+                            </graphic>
+                            </Button>
+                            <Button fx:id="increaseMinuteButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-plus" iconSize="22" styleClass="iconli-font-icon"/>
+                                </graphic>
+                            </Button>
+                            <Button fx:id="increaseSecondButton" onAction="#handleTimeAdjustment" prefHeight="50.0" prefWidth="50.0" styleClass="icon-btn">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-plus" iconSize="22" styleClass="iconli-font-icon"/>
+                                </graphic>
+                            </Button>
                         </HBox>
                     </StackPane>
                 </VBox>
             </HBox>
         </VBox>
         <!--Stats Column -->
-        <VBox alignment="TOP_LEFT" spacing="10" HBox.hgrow="ALWAYS" prefWidth="400">
+        <VBox alignment="TOP_LEFT" prefWidth="400" spacing="10" HBox.hgrow="ALWAYS">
             <padding>
-                <Insets top="15.0" right="15.0" bottom="15.0" left="15.0" />
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
             </padding>
-            <Label fx:id="statsLabel" text="Loading statistics..." alignment="CENTER_LEFT" style="-fx-font-family: monospace; -fx-font-size: 14pt; -fx-text-fill: #E0E0E0;" />
+            <Label fx:id="statsLabel" alignment="CENTER_LEFT" style="-fx-font-family: monospace; -fx-font-size: 14pt; -fx-text-fill: #E0E0E0;" text="Loading statistics..." />
         </VBox>
     </HBox>
 </AnchorPane>
