--- a/src/home.fxml
+++ b/src/home.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomeController">
     <children>
 
@@ -55,9 +56,21 @@
                 </GridPane>
             </children>
         </HBox>
-        <Button layoutX="830.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToSettings" text="Settings" />
-        <Button layoutX="75.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddNewMusic" text="Add Music" />
-        <Button fx:id="pomodoroButton" layoutX="200.0" layoutY="30.0" mnemonicParsing="false" text="Pomodoro" onAction="#goToPomodoro" />
+        <Button layoutX="840.0" layoutY="30.0" mnemonicParsing="false" onAction="#goToSettings" styleClass="icon-btn">
+            <graphic>
+                <FontIcon iconLiteral="fas-cog" iconSize="20" styleClass="iconli-font-icon"/>
+            </graphic>
+        </Button>
+        <Button layoutX="75.0" layoutY="30.0" mnemonicParsing="false" onAction="#AddNewMusic" styleClass="icon-btn">
+            <graphic>
+                <FontIcon iconLiteral="fas-plus" iconSize="20" styleClass="iconli-font-icon"/>
+            </graphic>
+        </Button>
+        <Button fx:id="pomodoroButton" layoutX="150.0" layoutY="30.0" mnemonicParsing="false" styleClass="icon-btn" onAction="#goToPomodoro">
+            <graphic>
+                <FontIcon iconLiteral="fas-stopwatch" iconSize="20" styleClass="iconli-font-icon"/>
+            </graphic>
+        </Button>
 
     </children>
 </AnchorPane>
